# Operaciones_matrices

./: CMakeLists.txt  Doxyfile
docs/html/: _fraccion_8cpp.html  _fraccion_8h.html  _fraccion_8h_source.html  _matriz_8cpp.html  _matriz_8h.html  _matriz_8h_source.html  _string_utils_8cpp.html  _string_utils_8h.html  _string_utils_8h_source.html  annotated.html  class_fraccion-members.html  class_fraccion.html  class_matriz-members.html  class_matriz.html  class_string_utils-members.html  class_string_utils.html  classes.html  dir_5810666af82ce16a4c42758600981834.html  dir_59425e443f801f1f2fd8bbe4959a3ccf.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_821002d4f10779a80d4fb17bc32f21f1.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_fcb5f19bff0a5117d30e239779e6390b.html  doxygen_crawl.html  files.html  functions.html  functions_func.html  functions_rela.html  globals.html  globals_func.html  index.html  menudata.js
docs/latex/: _fraccion_8cpp.tex  _fraccion_8h.tex  _fraccion_8h_source.tex  _matriz_8cpp.tex  _matriz_8h.tex  _matriz_8h_source.tex  _string_utils_8cpp.tex  _string_utils_8h.tex  _string_utils_8h_source.tex  annotated.tex  class_fraccion.tex  class_matriz.tex  class_string_utils.tex  (+2 more)
src/: Fraccion.cpp  Matriz.cpp  StringUtils.cpp
tests/: StringUtils_14-07-2024.cpp  TestFraccion.txt  TestFraccion_06-07-2024.cpp  TestFraccion_06-07-2024.txt  TestFraccion_08-07-2024.cpp  TestFraccion_10-07-2024.txt  TestFraccion_12-07-2024.txt  TestFraccion_13-07-2024.txt  TestMatriz.txt  TestStringUtils.txt  TestStringUtils_09-07-2024.txt  debugFraccion.txt
(+25 files in other folders)
